assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Barrio&family=Dosis&display=swap');

/* Common styles start */
body {
    font-family: 'Dosis', sans-serif;
    background-image: url(../images/harry-potter-hogwarts-homepage-background.jpeg);
}

h1 {
    font-family: 'Barrio', cursive;
}

a {
    text-decoration: none;
    color: black;
}

.invisible {
    visibility: hidden;
}
/* Common styles end */

/* Header & Nav styles start */
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
nav > ul {
    list-style-type: none;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 0;
    display: flex;
    gap: 5px;
}
nav .active {
    border-bottom: 1px solid black;
}
/* Header & Nav styles end */

/* Homepage style start */
#homepage-intro {
    text-align: center;
}

/* Homepage style end */

/* Wizard-form for homepage and quiz page*/
#wizard-details-form{
    display: flex;
    justify-content: center;
}
#start-quiz-button { 
    display: block;
    width: 100%;
    margin-top: 15px;
}
/* Wizard-form end */

/* Feedback style start*/
#feedback {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
}
#feedback-title {
    text-align: center;
}
/* Feedback style end*/

